--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -47,10 +47,10 @@ workflows:
       - name: Apply profiles
         script: xcode-project use-profiles
 
-      - name: Build IPA
+            - name: Build IPA
         script: |
           set -e
-          xcode-project build-ipa --workspace "$WORKSPACE" --scheme "$SCHEME" --archive-method app-store
+          xcode-project build-ipa --workspace "$WORKSPACE" --scheme "$SCHEME"
           FOUND_IPA="$(find "$CM_BUILD_DIR" -name '*.ipa' -print -quit || true)"
           [ -z "$FOUND_IPA" ] && FOUND_IPA="$(find . ios/App -name '*.ipa' -print -quit || true)"
           [ -n "$FOUND_IPA" ] && cp "$FOUND_IPA" "$CM_ARTIFACTS/" || (echo "No IPA found" && exit 2)
